all responsive breakepoints and footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>html</title>
+    <title>Craft_Lance</title>
   </head>
   <body>
     <header>
@@ -19,8 +19,8 @@
                   <li><a href="#"><i class="fa-brands fa-linkedin-in fa-1x"></i></a></li>
             </div>
             <div class="header_contact-box">
-               <a href="tel:+44 99151012545"><i class="fa-solid fa-phone fa-1x"></i> +44 99151012545</a>
-               <a href = "mailto: contact@bluelance.com"><i class="fa-solid fa-envelope fa-1x"></i> contact@bluelance.com</a>
+               <a href="tel:+44 99151012545"><i class="fa-solid fa-phone fa-1x"></i>+44 99151012545</a>
+               <a href="mailto:contact@bluelance.com"><i class="fa-solid fa-envelope fa-1x"></i> contact@bluelance.com</a>
             </div>
          </div>
        </div>
@@ -141,53 +141,53 @@
    </main>
    <!-- footer -->
    <footer>
-      <div class="footer_container container">
-         <div class="footer_content">
-            <div class="footer_content-item">
-               <h4 class="content_item-title">Newsletter</h4>
-               <p>Insights await in your company's data. Bring them into focus with BlueLance.</p>
-               <div class="footer_content_email-box">
-                  <input type="email" placeholder="enter your email">
-                  <button href="#"><i class="fa-solid fa-angle-up"></i></button>
+         <div class="footer_container container">
+            <div class="footer_content">
+               <div class="footer_content-item">
+                  <h4 class="content_item-title">Newsletter</h4>
+                  <p>Insights await in your company's data. Bring them into focus with BlueLance.</p>
+                  <div class="footer_content_email-box footer_form">
+                     <input type="email" placeholder="enter your email">
+                     <button href="#"><i class="fa-solid fa-angle-up"></i></button>
+                  </div>
+               </div>
+               <div class="footer_content-item">
+                  <h4 class="content_item-title">Quck Links</h4>
+                  <a href="">POWER BI DESKTOP</a>
+                  <a href="">MOBILE</a>
+                  <a href="">SEE ALL DOWNLOADS</a>
+                  <a href="">POWER BI DESKTOP</a>
+                  <a href="">MOBILE</a>
+                  <a href="">SEE ALL DOWNLOADS</a>
+               </div>
+               <div class="footer_content-item">
+                  <h4 class="content_item-title">Legal</h4>
+                  <a href="">PRIVACY & COOKIES</a>
+                  <a href="">TERMS OF USE</a>
+                  <a href="">TRADEMARKS</a>
+               </div>
+               <div class="footer_content-item">
+                  <h4 class="content_item-title">Information</h4>
+                  <a href="">SUPPORT</a>
+                  <a href="">DEVELOPERS</a>
+                  <a href="">BLOG</a>
+                  <a href="">NEWSLETTER</a>
+                  <a href="">MOBILE</a>
+                  <a href="">PYRAMID ANALYTICS</a>
                </div>
             </div>
-            <div class="footer_content-item">
-               <h4 class="content_item-title">Quck Links</h4>
-               <a href="">POWER BI DESKTOP</a>
-               <a href="">MOBILE</a>
-               <a href="">SEE ALL DOWNLOADS</a>
-               <a href="">POWER BI DESKTOP</a>
-               <a href="">MOBILE</a>
-               <a href="">SEE ALL DOWNLOADS</a>
-            </div>
-            <div class="footer_content-item">
-               <h4 class="content_item-title">Legal</h4>
-               <a href="">PRIVACY & COOKIES</a>
-               <a href="">TERMS OF USE</a>
-               <a href="">TRADEMARKS</a>
-            </div>
-            <div class="footer_content-item">
-               <h4 class="content_item-title">Information</h4>
-               <a href="">SUPPORT</a>
-               <a href="">DEVELOPERS</a>
-               <a href="">BLOG</a>
-               <a href="">NEWSLETTER</a>
-               <a href="">MOBILE</a>
-               <a href="">PYRAMID ANALYTICS</a>
-            </div>
          </div>
-   
          <div class="subfuoter_row">
-            <div class="subfooter_logo-box">
-               <a href="#"><img src="/image/logo.svg" alt="logo"></a>
-            </div>
-            <div class="subfooter_copyrights-box">
-               <p>© Designed by Moin Khan. All Rights Reserved.</p>
-               <span>Made by BlueLance</span>
+            <div class="subfuoter_container container">
+               <div class="subfooter_logo-box">
+                  <a href="#"><img src="/image/logo.svg" alt="logo"></a>
+               </div>
+               <div class="subfooter_copyrights-box">
+                  <p>© Designed by Moin Khan. All Rights Reserved.</p>
+                  <span>Made by BlueLance</span>
+               </div>
             </div>
          </div>
-      </div>
- 
    </footer>
     <script
       src="https://kit.fontawesome.com/e7479c33ea.js"
