--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             A Comprehensive Data Integration and <br>
                Business Analytics Platform
          </div>
+         
        </section>
    </main>
    <!-- footer -->
@@ -194,5 +195,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/app.js"></script>
+    <script src="/platformInformation.js"></script>
   </body>
 </html>
