--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <section class="first_main-section">
           <div class="main_section-container container">
             <div class="main_section-textbox">
-               <h1>Bring your Big Data to Life With Carft Lance</h1>
+               <h1 class="">Bring your Big Data to Life With Carft Lance</h1>
                <p>Blue Lance transforms your company's data into rich visuals 
                   for you to collect and organize so you can focus on what matters
                   to you. Stay in the know, spot trends as they happen, and push 
@@ -125,6 +125,7 @@
             <div class="package_product-btn">
                <button class="business_btn product_btn">Business Edition</button>
                <button class="community_btn product_btn right_btn">Community Edition</button>
+               <span class="product_btn_middle-or">or</span>
             </div>
 
             <div id="div">
@@ -132,12 +133,11 @@
             </div>
        </section>
        <!-- card_section -->
-       <section class="card_section">
-         <div class="card_section-title">
+       <section id="card_section">
+         <div id="card_section-title">
             A Comprehensive Data Integration and <br>
                Business Analytics Platform
          </div>
-         
        </section>
    </main>
    <!-- footer -->
@@ -194,7 +194,6 @@
       src="https://kit.fontawesome.com/e7479c33ea.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/app.js"></script>
-    <script src="/platformInformation.js"></script>
+    <script type="module" src="/app.js"></script>
   </body>
 </html>
