service_package and card_section js

--- a/index.html
+++ b/index.html
@@ -118,26 +118,24 @@
        </section>
        <!-- service_package-section -->
        <section class="service_package-section">
-         <div class="pachage_section-container">
+         <div id="package_section" class="package_section-container">
             <div class="package_section-title">
                <h2>Affordable Services Package</h2>
             </div>
             <div class="package_product-btn">
-               <button class="business_btn product_btn">Business Edition</button>
-               <button class="community_btn product_btn right_btn">Community Edition</button>
+               <button id="business_btn" class="business_btn product_btn">Business Edition</button>
+               <button id="community_btn" class="community_btn product_btn right_btn">Community Edition</button>
                <span class="product_btn_middle-or">or</span>
-            </div>
-
-            <div id="div">
-              
             </div>
        </section>
        <!-- card_section -->
        <section id="card_section">
-         <div id="card_section-title">
-            A Comprehensive Data Integration and <br>
-               Business Analytics Platform
-         </div>
+          <div id="card_section-wrap" class="container">
+            <div id="card_section-title">
+               A Comprehensive Data Integration and <br>
+                  Business Analytics Platform
+          </div>
+          </div>
        </section>
    </main>
    <!-- footer -->
