delete module folder change js file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Craft_Lance</title>
   </head>
 
@@ -71,7 +71,7 @@
             </p>
           </div>
           <div class="main_section-image">
-            <img src="/image/image.png" alt="">
+            <img src="./image/image.png" alt="">
           </div>
         </div>
       </section>
@@ -91,7 +91,7 @@
       </section>
       <!-- second_main-section -->
       <section class="second_main-section">
-        <img src="/image/signupbg.png" alt="">
+        <img src="./image/signupbg.png" alt="">
         <div class="second_mainbg-mask"></div>
         <div class="main_section-signup">
           <h2>Community Sign Up</h2>
@@ -181,7 +181,7 @@
       <div class="subfuoter_row">
         <div class="subfuoter_container container">
           <div class="subfooter_logo-box">
-            <a href="#"><img src="/image/logo.svg" alt="logo"></a>
+            <a href="#"><img src="./image/logo.svg" alt="logo"></a>
           </div>
           <div class="subfooter_copyrights-box">
             <p>© Designed by Moin Khan. All Rights Reserved.</p>
@@ -191,7 +191,7 @@
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/e7479c33ea.js" crossorigin="anonymous"></script>
-    <script type="module" src="/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 
 </html>
